--- a/src/layout/navigation.module.css
+++ b/src/layout/navigation.module.css
@@ -1,14 +1,27 @@
 .navBar {
     background-color: lightblue;
     margin: 10px;
-    padding: 10px;
+    padding: 20px;
     display: flex;
     justify-content: space-between;
 }
 
 .navItem {
+    font-weight: 600;
+    font-family: "Open Sans", sans-serif;
+    text-decoration: none;
+
     background-color: green;
     color: white;
     margin: 10px;
     padding: 10px;
+}
+
+.navItem:hover {
+    background-color: darkgreen;
+}
+
+.navItem:active {
+    border-radius: 2px;
+    border-color:black;
 }
