--- a/src/pages/addInfo.module.css
+++ b/src/pages/addInfo.module.css
@@ -1,69 +1,22 @@
 @import url("https://fonts.googleapis.com/css?family=Saira+Semi+Condensed&display=swap");
+
 * {
-  font-family: "Saira Semi Condensed", sans-serif;
-  transition: all 0.5s ease;
-}
-
-form {
-  width: 400px;
-  display: flex;
-  flex-flow: column wrap;
-  align-items: center;
-  justify-content: center;
-}
-
-form div,
-form label,
-form input,
-form textarea {
-  width: 100%;
-}
-
-label,
-input{
-  padding: 8px;
-  margin-bottom: 10px;
-}
-
-label{
-  color: #555;
-}
-
-label {
-  margin: 0 10px 0 0;
-}
-
-input,
-textarea {
-  background: rgba(255, 255, 255, 0.5);
-  border: none;
-  border-radius: 4px;
-  box-shadow: 0 8px 6px -6px #555;
-}
-input:focus,
-textarea:focus {
-  background: white;
-  box-shadow: none;
-}
-
-textarea {
-  resize: none;
-}
-textarea::-webkit-scrollbar {
-  width: 0;
+    font-family: "Saira Semi Condensed", sans-serif;
+    transition: all 0.3s ease;
 }
 
 button {
-  background: #2f4ad0;
-  margin: 16px 0 50px 0;
-  padding: 8px 16px;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  box-shadow: 0 8px 6px -6px #555;
+    background: #2f4ad0;
+    margin: 16px 0 50px 0;
+    padding: 8px 16px;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 0 8px 6px -6px #555;
 }
+
 button:hover {
-  letter-spacing: 2px;
-  box-shadow: none;
+    box-shadow: none;
+    background: #2f4fd0;
 }
