--- a/src/components/inputBox.module.css
+++ b/src/components/inputBox.module.css
@@ -1,43 +1,29 @@
 @import url("https://fonts.googleapis.com/css?family=Saira+Semi+Condensed&display=swap");
 
-* {
+.inputName,
+.textBox {
     font-family: "Saira Semi Condensed", sans-serif;
     transition: all 0.3s ease;
-}
-
-form {
-    width: 400px;
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
-    justify-content: center;
-}
-
-form div,
-form label,
-form input {
-    width: 100%;
-}
-
-label,
-input {
-    padding: 8px;
+    padding-top: 8px;
+    padding-bottom: 8px;
     margin-bottom: 10px;
 }
 
-label {
-    color: #555;
+
+.inputName{
+    color: white;
     margin: 0 10px 0 0;
+
 }
 
-input {
+.textBox {
     background: rgba(255, 255, 255, 0.5);
     border: none;
     border-radius: 4px;
     box-shadow: 0 8px 6px -6px #555;
 }
 
-input:focus {
+.textBox:focus {
     background: white;
     box-shadow: none;
 }
