Got reference to elements working

--- a/src/layout/navigation.module.css
+++ b/src/layout/navigation.module.css
@@ -1,6 +1,6 @@
 .navBar {
     background-color: lightblue;
-    margin: 10px;
+    /* margin: 10px; */
     padding: 20px;
     display: flex;
     justify-content: space-between;
