--- a/src/pages/photoGallery.module.css
+++ b/src/pages/photoGallery.module.css
@@ -1,5 +1,5 @@
 .photosBox {
-    background-color: gray;
+    /* background-color: gray; */
     text-align: center;
     display: flex;
     justify-content: space-between;
