--- a/src/components/photoColumn.module.css
+++ b/src/components/photoColumn.module.css
@@ -1,5 +1,5 @@
 .column {
-    background-color: deeppink;
+    /* background-color: deeppink; */
     min-width: 100px;
     width: 27%;
     margin: 10px;
