--- a/src/layout/navigation.module.css
+++ b/src/layout/navigation.module.css
@@ -1,26 +1,47 @@
 .navBar {
-    background-color: lightblue;
+    background-color: black;
     padding: 20px;
     display: flex;
     justify-content: space-between;
 }
 
 .navItem {
-    font-weight: 600;
+    font-weight: 800;
     font-family: "Open Sans", sans-serif;
     text-decoration: none;
-
-    background-color: green;
+    background-color: none;
     color: white;
-    margin: 10px;
+    margin: 15px;
     padding: 10px;
+    border-radius: 4px;
 }
 
 .navItem:hover {
-    background-color: darkgreen;
+    transition: all 0.3s ease;
+    background-color: rgb(39, 39, 39);
 }
 
 .navItem:active {
     border-radius: 2px;
-    border-color:black;
+    border-color: black;
+}
+
+.menu {
+    display: none;
+    color: white;
+}
+
+@media screen and (max-width: 750px) {
+    .menu {
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        transform: translate(-100%, 60%);
+        font-size: 1.8rem;
+        cursor: pointer;
+    }
+    .navList {
+        display: none;
+    }
 }
