--- a/src/components/introBox.module.css
+++ b/src/components/introBox.module.css
@@ -1,3 +1,37 @@
 .intro {
-    background-color: blueviolet;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
+    /* background-color: lightgray; */
+    margin: 3%;
+}
+
+.title {
+    background-color: white;
+    border-color: black;
+    border: 0.1rem;
+    border-style: solid;
+    border-bottom-style: none;
+    border-radius: 8px 8px 0px 0px;
+    padding: 0.5rem;
+    padding-bottom: 0.1rem;
+    max-width: fit-content;
+    margin-bottom: 0%;
+}
+
+.body {
+    margin-top: 0%;
+    padding: 0.5rem;
+    background-color: white;
+    border-radius: 0px 8px 8px 8px;
+    white-space: pre-line;
+    border-color: black;
+    border: 0.1rem;
+    border-style: solid;
+}
+
+.text {
+    margin: 0%;
+    font-weight: bolder;
+    font-family:'Gill Sans', Calibri, 'Trebuchet MS', sans-serif;
+    white-space: pre-wrap;       
 }
