--- a/src/layout/navMenu.module.css
+++ b/src/layout/navMenu.module.css
@@ -1,6 +1,7 @@
-.menu {
+.navMenu {
     transition: 0.3s ease-in-out;
     top: -100%;
+    left: 0;
     opacity: 0%;
     position: fixed;
     width: 100%;
@@ -9,12 +10,11 @@
     display: grid;
     align-items: center;
     text-align: center;
-    left: 0;
 }
 
 .opened {
-    top: 0;
-    opacity: 100%;
+    top: 0; 
+    opacity: 1;
 }
 
 .closeBtn {
@@ -29,11 +29,11 @@
     border-radius: 4px;
 }
 
-.navItem{
+.navItem {
     font-weight: 800;
     font-family: "Open Sans", sans-serif;
     text-decoration: none;
-    background-color: none;
+    background-color: rgb(17, 17, 17);
     color: white;
     margin: 0;
     padding: 3rem;
