--- a/src/components/blogPost.module.css
+++ b/src/components/blogPost.module.css
@@ -1,3 +1,22 @@
 .post {
     background-color: gray;
 }
+
+.body {
+    color: black;
+    margin: 3%;
+    padding: 0.5rem;
+    background-color: white;
+    border-radius: 8px;
+    white-space: pre-line;
+    border-color: black;
+    border: 0.1rem;
+    border-style: solid;
+}
+
+.text {
+    margin: 0%;
+    font-weight: bolder;
+    font-family:'Gill Sans', Calibri, 'Trebuchet MS', sans-serif;
+    white-space: pre-wrap;       
+}
