--- a/src/pages/homePage.module.css
+++ b/src/pages/homePage.module.css
@@ -5,6 +5,6 @@
     height: 100%;
     min-height: calc(100vh - 46px - 1rem);
     background-size:contain;
-    background-color: rgb(186, 186, 186);
-    background-blend-mode:lighten;
+    /* background-color: rgb(186, 186, 186);
+    background-blend-mode:lighten; */
 }
