--- a/src/components/introBox.module.css
+++ b/src/components/introBox.module.css
@@ -1,7 +1,6 @@
 .intro {
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Open Sans", sans-serif;
     color: black;
-    /* background-color: lightgray; */
     margin: 3%;
 }
 
@@ -12,7 +11,8 @@
     border-style: solid;
     border-bottom-style: none;
     border-radius: 8px 8px 0px 0px;
-    padding: 0.5rem;
+    padding: 0.7rem;
+    padding-top: 0.3rem;
     padding-bottom: 0.1rem;
     max-width: fit-content;
     margin-bottom: 0%;
@@ -32,6 +32,6 @@
 .text {
     margin: 0%;
     font-weight: bolder;
-    font-family:'Gill Sans', Calibri, 'Trebuchet MS', sans-serif;
-    white-space: pre-wrap;       
+    font-family: "Open Sans", sans-serif;
+    white-space: pre-wrap;
 }
