--- a/src/components/arrangements/postForm.module.css
+++ b/src/components/arrangements/postForm.module.css
@@ -35,6 +35,8 @@
 }
 
 .form {
+    margin: auto;
+    margin-top: 3rem;
     background-color: rgb(90, 90, 90);
     width: 500px;
     padding: 20px;
