Reformatted blog posts

--- a/src/components/blogPost.module.css
+++ b/src/components/blogPost.module.css
@@ -11,9 +11,9 @@
     background-color: white;
     border-radius: 8px;
     white-space: pre-line;
-    border-color: black;
+    /* border-color: black;
     border: 0.1rem;
-    border-style: solid;
+    border-style: solid; */
 }
 
 .text {
@@ -24,18 +24,20 @@
 }
 
 .title, .date {
-    display: inline-block;
+    /* display: inline-block; */
+    /* center title */
+    text-align: center;
 }
-
+/* 
 .date{
     float: right;
+} */
+
+.sectionBreak{
+    margin:  2% 2rem 3% 2rem;
+    border-bottom: 0.1rem solid black;
 }
 
-.sect {
-    width: 100%;
-
-    /* background-color: aliceblue;
-    border-color: black;
-    border: 0.1rem;
-    border-style: solid; */
+.signatureTitle, .signatureBody, .desc {
+    padding: 0rem 1.5rem;
 }
