--- a/src/pages/addPicturesPage.module.css
+++ b/src/pages/addPicturesPage.module.css
@@ -17,6 +17,13 @@
     font-family: "Open Sans", sans-serif;
 }
 
+.previewImg{
+    max-width: 25rem;
+    max-height: 15rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .button{
     font-weight: 600;
     font-family: "Open Sans", sans-serif;
@@ -26,6 +33,5 @@
     text-align: center;
     font-weight: 800;
     font-family: "Open Sans", sans-serif;
-    margin: 15px;
-    padding: 10px;
+    padding: 8px;
 }
