--- a/src/pages/homePage.module.css
+++ b/src/pages/homePage.module.css
@@ -11,6 +11,8 @@
     justify-content: center;
     background-color: #1a1c25;
     padding-top: 2rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
     width: 70vw;
     height: calc(100vh - 3.6rem - 40px);
     overflow-y: scroll;
