--- a/src/layout/dropDownMenu.module.css
+++ b/src/layout/dropDownMenu.module.css
@@ -1,10 +1,8 @@
-.DropdownMenu{
+.menuButton{
     background-color: none;
     color: white;
-    /* margin: 15px; */
     padding: 10px;
     border-radius: 4px;
-
     display: block;
     position: absolute;
     top: -2.5%;
@@ -13,7 +11,7 @@
     font-size: 1.7rem;
 }
 
-.DropdownMenu:hover{
+.menuButton:hover{
     cursor: pointer;
     transition: all 0.3s ease;
     background-color: rgb(39, 39, 39);
@@ -25,11 +23,13 @@
     justify-content: center;
     align-items: center;
     margin-top: 1rem;
-
-    background-color: gray;
-
+    border-width: 1px;
+    border-color: white;
+    border-style: solid;
+    border-radius: 4px;
+    background-color: #424552;
     position: absolute;
-    top: 58px;
+    top: 45px;
     width: 300px;
-    transform: translate(-100%);
+    right: 2%;
 }
