--- a/src/layout/navigation.module.css
+++ b/src/layout/navigation.module.css
@@ -5,7 +5,7 @@
     justify-content: space-between;
 }
 
-.menuItem{
+.menuItem {
     width: 260px;
     font-weight: 800;
     font-family: "Open Sans", sans-serif;
@@ -17,7 +17,7 @@
     border-radius: 4px;
 }
 
-.navItem {
+.homeNav {
     font-weight: 800;
     font-family: "Open Sans", sans-serif;
     text-decoration: none;
