--- a/src/layout/dropDownMenu.module.css
+++ b/src/layout/dropDownMenu.module.css
@@ -14,7 +14,7 @@
 .menuButton:hover{
     cursor: pointer;
     transition: all 0.3s ease;
-    background-color: rgb(39, 39, 39);
+    background-color: #272727;
 }
 
 .itemHolder{
