--- a/src/components/ProjectCard.module.css
+++ b/src/components/ProjectCard.module.css
@@ -1,7 +1,7 @@
 .projectCard{
     margin: 1rem;
     padding: 1rem;
-    width: 25%;
+    width: 29%;
     
     border-radius: 8px;
     
@@ -9,6 +9,8 @@
 
     text-align: center;
     font-family: "Open Sans", sans-serif;
+
+    float: left;
 }
 
 .projectImg{
