--- a/src/components/ProjectCard.module.css
+++ b/src/components/ProjectCard.module.css
@@ -1,4 +1,6 @@
 .projectCard{
+    transition: 0.3s;
+
     margin: 1rem;
     padding: 1rem;
     width: 29%;
@@ -11,6 +13,10 @@
     font-family: "Open Sans", sans-serif;
 
     float: left;
+}
+
+.projectCard:hover{
+    box-shadow: 2px 2px 2px 1px rgba(255, 255, 255, 0.2);
 }
 
 .projectImg{
