--- a/src/pages/ProjectDisplayPage.module.css
+++ b/src/pages/ProjectDisplayPage.module.css
@@ -1,4 +1,8 @@
-.projectPage {
-    overflow: auto;
+.projectPage{
+    padding: 3rem;
     background-color: #1a1c25;
+}
+
+.cardHolder {
+    overflow: auto;
 }
