--- a/src/components/ProjectCard.module.css
+++ b/src/components/ProjectCard.module.css
@@ -1,46 +1,48 @@
-.cardHolder{
+.cardHolder {
     width: calc(100% / 3);
-    height: 60vh;
+    height: 28rem;
 
     float: left;
 }
 
-.projectCard{
+.projectCard {
     transition: 0.3s;
 
     padding: 1rem;
     margin: 1rem;
     width: calc(100% - 2rem);
     height: calc(100% - 2rem);
-    
+
     border-radius: 8px;
-    
+
     background-color: black;
-    
+
     text-align: center;
     font-family: "Open Sans", sans-serif;
-    
+
     overflow: hidden;
 
     box-sizing: border-box;
 }
 
-.projectCard:hover{
+.projectCard:hover {
     box-shadow: 0px 0px 4px 3px rgba(255, 255, 255, 0.2);
-    
-    margin: 0.5rem;
-    height: calc(100% - 1rem);
-    width: calc(100% - 1rem);
+
+    font-size: 1.1rem;
+
+    margin: 0.4rem;
+    height: calc(100% - 0.8rem);
+    width: calc(100% - 0.8rem);
 }
 
-.projectImg{
+.projectImg {
     width: 80%;
-    height: 35vh;
+    height: 60%;
 
     object-fit: contain;
     background-color: #111;
 }
 
-.text{
+.text {
     color: white;
 }
