--- a/src/components/blogPost.module.css
+++ b/src/components/blogPost.module.css
@@ -1,15 +1,23 @@
-.post,
-.text,
-.date {
-    font-family: "Open Sans", sans-serif;
+.title, .date {
+    text-align: center;
 }
 
 .post {
+    font-family: "Open Sans", sans-serif;
+
     color: white;
-    margin: 3%;
-    padding: 0.5rem 0.5rem 0rem 0.5rem;
     background-color: #1a1c25;
+
+    margin: 3%;
+
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0rem;
+
+
     border-radius: 8px;
+
     white-space: pre-line;
 }
 
@@ -17,23 +25,18 @@
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
     font-size: 2rem;
+
     padding-bottom: 3rem;
+
     color: gray;
 }
 
-.text {
-    margin: 0%;
-    font-weight: bolder;
-    font-family: 'Gill Sans', Calibri, 'Trebuchet MS', sans-serif;
-    white-space: pre-wrap;
-}
+.sectionBreakLine {
+    margin-right: 2rem;
+    margin-left: 2rem;
+    margin-top: 2%;
+    margin-bottom: 3%;
 
-.title, .date {
-    text-align: center;
-}
-
-.sectionBreak{
-    margin:  2% 2rem 3% 2rem;
     border-bottom: 0.1rem solid white;
 }
 
@@ -41,13 +44,13 @@
     padding: 0rem 1.5rem;
 }
 
-.userName{
-    display: inline;
-}
-
 .userName, .userImg {
     height: 2rem;
-    vertical-align : middle;
+    vertical-align: middle;
+}
+
+.userName {
+    display: inline;
 }
 
 .userImg {
