--- a/src/components/introBox.module.css
+++ b/src/components/introBox.module.css
@@ -1,29 +1,37 @@
 .intro {
     font-family: "Open Sans", sans-serif;
     color: white;
+
     margin: 3%;
 }
 
 .title {
     background-color: #1a1c25;
-    font-size: 3rem;
-    padding: 0.7rem;
+
     text-align: center;
+    font-size: 3rem;
+
+    padding: 0.7rem;
 }
 
 .body {
     margin-top: 0%;
-    padding: 1.5rem 0.5rem 1.5rem 1rem;
-    background-color: #1a1c25;
-    white-space: pre-line;
+    padding-left: 1rem;
+    padding-right: 0.5rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+
     border: 0.1rem;
     border-top-style: solid;
     border-bottom-style: solid;
+
+    background-color: #1a1c25;
 }
 
 .text {
     margin: 0%;
-    font-weight: bolder;
+
     font-family: "Open Sans", sans-serif;
+    font-weight: bolder;
     white-space: pre-wrap;
 }
