--- a/src/pages/AddBlogPostPage.module.css
+++ b/src/pages/AddBlogPostPage.module.css
@@ -1,11 +1,11 @@
 .addPostPage {
     align-items: center;
     background-color: #1a1c25;
-    display:flex;
+    display: flex;
     height: calc(100vh - 40px - 1.6rem);
 }
 
-.aligner{
+.aligner {
     width: 100%;
 }
 
@@ -25,7 +25,7 @@
     color: black;
 }
 
-.bodyInput{
+.bodyInput {
     resize: none;
 
     margin: 1rem;
@@ -38,7 +38,8 @@
     background-color: white;
     color: black;
 }
-.bodyInput:focus-visible{
+
+.bodyInput:focus-visible {
     outline: none;
 }
 
@@ -52,6 +53,15 @@
     background-color: blue;
     color: white;
 }
+
 .submit:active {
     filter: brightness(0.85);
+}
+
+.title {
+    color: white;
+
+    font-family: "Open Sans", sans-serif;
+    font-size: 2.5rem;
+    text-align: center;
 }
