--- a/src/pages/aboutMePage.module.css
+++ b/src/pages/aboutMePage.module.css
@@ -1,43 +1,27 @@
-.profileInfo{
+.profileInfo {
     text-align: center;
 }
 
-.profileImg{
+.profileImg {
     margin: 10px;
+
     border-width: 3px;
     border-style: solid;
     border-color: black;
     border-radius: 200px;
 }
 
-.profileHyperLink{
-    border: 1px;
-    border-color: black;
-    border-style: dashed;
+.profileHyperLink {
     text-decoration: none;
+    
+    border: 1px black;
+    border-bottom-style: dashed;
 }
 
-.profileLinks{
+.profileLinks {
     margin: 1rem;
 }
 
-.profileText{
+.profileText {
     margin: 0px;
-}
-
-.profileLink:visited{
-    color: blue;
-}
-
-.profileLink:link{
-    color: blue;
-
-}
-
-.profileLink:hover{
-    color: rgb(87, 87, 255);
-}
-
-.profileLink:active{
-    color: rgb(0, 0, 178);
 }
