--- a/src/pages/photoGallery.module.css
+++ b/src/pages/photoGallery.module.css
@@ -1,18 +1,20 @@
-.photosBox {
-    /* background-color: gray; */
-    text-align: center;
+.galleryPage {
     display: flex;
     justify-content: space-between;
+
     width: 92%;
+
     margin-right: auto;
     margin-left: auto;
     margin-top: 3rem;
 }
 
 .loading {
-    font-family:'Gill Sans', Calibri, 'Trebuchet MS', sans-serif;
-    margin: 6rem;
+    font-family: 'Gill Sans', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 4vw;
     font-weight: bold;
+
     text-align: center;
+
+    margin: 6rem;
 }
