--- a/src/components/Notification.module.css
+++ b/src/components/Notification.module.css
@@ -1,11 +1,18 @@
 .notification {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 800;
+
     color: white;
-    background-color: black;
+    background-color: #800;
 
-    border: 2px solid white;
+    border: 2px solid black;
+    border-radius: 8px;
 
-    width: 300px;
-    height: 75px;
+    width: 200px;
+    
+    padding: 30px;
+
+    margin: 1rem;
 
     text-align: center;
     vertical-align: middle;
