Styled posts and pages and added default values

--- a/src/pages/homePage.module.css
+++ b/src/pages/homePage.module.css
@@ -12,3 +12,14 @@
     
     width: 70vw;
 }
+
+.postDivider {
+    font-family: 'Courier New', Courier, monospace;
+    text-align: center;
+    font-size: 2rem;
+
+    padding-top: 3rem;
+    padding-bottom: 1rem;
+
+    color: gray;
+}
