--- a/src/components/AddBlogPost.module.css
+++ b/src/components/AddBlogPost.module.css
@@ -1,3 +1,7 @@
+.blogPostSection {
+    text-align: center;
+}
+
 .title {
     color: white;
 
@@ -6,7 +10,7 @@
     text-align: center;
 }
 
-.titleInput, .bodyInput, .submit {
+.titleInput, .bodyInput, .submit, .changePage {
     font-family: "Open Sans", sans-serif;
 }
 
@@ -45,7 +49,7 @@
     width: 100px;
 
     display: block;
-    margin: auto;
+    margin: 1rem auto;
 
     background-color: blue;
     color: white;
@@ -55,3 +59,12 @@
     filter: brightness(0.85);
 }
 
+.changePage {
+    text-decoration: none;
+    color: white;
+    background-color: #38c;
+    padding: 5px;
+    border-radius: 2px;
+    font-size: small;
+    font-weight: 600;
+}
