--- a/src/components/PreviewBlogPost.module.css
+++ b/src/components/PreviewBlogPost.module.css
@@ -1,7 +1,22 @@
+.previewPostSection{
+    text-align: center;
+}
+
 .title {
     color: white;
 
     font-family: "Open Sans", sans-serif;
     font-size: 2.5rem;
     text-align: center;
+}
+
+.changePage {
+    font-family: "Open Sans", sans-serif;
+    text-decoration: none;
+    color: white;
+    background-color: #38c;
+    padding: 5px;
+    border-radius: 2px;
+    font-size: small;
+    font-weight: 600;
 }
